# scene-ouverte-shotgun

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cron.yaml
src/scene_ouverte_shotgun/: __init__.py  __main__.py
