[project]
name = "scene-ouverte-shotgun"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paul Nicolet", email = "nicoletpaul@orange.fr" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"scene-ouverte-shotgun" = "scene_ouverte_shotgun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scene_ouverte_shotgun"]
